--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 
 h1 {
-    text-align: center; font-size: 30px;
+    text-align: center; font-size: 50px;
 }
 
 h2 {
@@ -23,11 +23,20 @@ p {
 }
 
 #missão {
-    font-size: 50px;
+    font-size: 30px;
 }
 
 em strong {
-    color: rgb(110, 81, 81);
+    color: rgb(14, 84, 96);
+}
+
+h4 {
+    text-align: center; font-size: 30px;
+}
+
+h5{
+    text-align: center; font-size: 15px;
+
 }
 
 .itens {
